# qscheme

./: .gitignore  README.md  check1.py  check2.py  check3.py  check4.py  check5.py  data.npy  data2.npy  main.py  matrix  plots.py  requirements.txt  setup.py  setup_parameters.py  state_configurations.py  test.py
checkouts/: check10.py  check11.py  check12.py  check13.py  check14.py  check2.py  check3.py  check4.py  check5.py  check6.py  check7.py  check8.py  check9.py  plots.py
core/: basic.py  gradient_methods.py  layer.py  projection.py  squeezing.py  state_configurations.py  system.py  sytem_setup.py
core/optimized/: README.md  setup.py  transformations.c  transformations.pyx  transformations_source.cpp
core/test/: test_basic.py  test_squeezing.py  test_state_configurations.py  test_transformations.py
core/tests/: test_basic.py  test_squeezing.py  test_transformations.py
cpp_optimized/: CMakeLists.txt  main.cpp  test.cpp
cpp_optimized/results/: coh_single_DET-F.txt
customutils/: min_search.py  plotting.py  utils.py
customutils/test/: test_utils.py
results/: formulas.dvi  formulas.tex  res1.odp  res2.odp  res3.odp
results/res1/: res1.odp
results/res10/: res10.odp
results/res11/: .~lock.res11.odp#  res11.odp
results/res12/: .~lock.res12_2.odp#  res12.odp  (+2 more)
scripts/: coh_single_analytics_epr.py  epr_t2_t4.py  epr_t2_t4_plots.py  epr_vs_prob.py  gradient_search.py  grid_calc.py  grid_search.py  high_prob_params.py  min_search.py  plots.py  plotting.py  space_grid.py  spd_epr_numerical.py  spd_epr_vs_phase.py
tf_implementation/: run.py
(+493 files in other folders)
